[package]
name = "listen_lxn_mqtt"
version = "0.1.0"
edition = "2024"

[dependencies]
rumqttc = "0.24"
dotenvy = "0.15"
mac_address = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "json", "macros"] }
serde_json = "1"
